[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Tileset/tileset_terreno.tres" type="TileSet" id=1]
[ext_resource path="res://Assets/Scenes/Procedural.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Tileset/tile_map_offset_texture.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Ground" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 2
format = 1
tile_data = PoolIntArray( 15, 5, 0, 65551, 5, 0, 65552, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 5, 0, 65563, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 5, 0, 131097, 5, 0, 131098, 5, 0, 131099, 5, 0, 196624, 5, 0, 196625, 5, 0, 196626, 5, 0, 196627, 5, 0, 196628, 5, 0, 196629, 5, 0, 196630, 5, 0, 196631, 5, 0, 196632, 5, 0, 196635, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 262170, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 327704, 5, 0, 327705, 5, 0, 327706, 5, 0, 393231, 5, 0, 393232, 5, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 393237, 5, 0, 393238, 5, 0, 393239, 5, 0, 393241, 5, 0, 393242, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 458773, 5, 0, 458774, 5, 0, 458775, 5, 0, 458777, 5, 0, 458778, 5, 0, 458788, 3, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524318, 2, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589852, 0, 0, 589855, 3, 0, 589856, 3, 0, 589857, 3, 0, 589858, 3, 0, 589861, 0, 0, 655377, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655391, 3, 0, 655392, 2, 0, 655393, 2, 0, 655394, 3, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720927, 3, 0, 720928, 2, 0, 720929, 2, 0, 720930, 3, 0, 720931, 0, 0, 786462, 3, 0, 786463, 0, 0, 786464, 2, 0, 786465, 2, 0, 786466, 3, 0, 786467, 0, 0, 851999, 3, 0, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 0, 0, 917533, 2, 0, 917535, 3, 0, 917543, 3, 0, 917544, 2, 0, 917545, 2, 0, 917546, 2, 0, 917547, 2, 0, 917548, 2, 0, 983073, 3, 0, 983079, 0, 0, 983080, 2, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 2, 0, 1048613, 0, 0, 1048615, 0, 0, 1048616, 2, 0, 1048617, 2, 0, 1048618, 2, 0, 1048619, 2, 0, 1048620, 2, 0, 1048621, 3, 0, 1114149, 0, 0, 1114151, 2, 0, 1179677, 0, 0, 1179685, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179692, 0, 0, 1245221, 0, 0, 1245223, 0, 0, 1310761, 0, 0, 1507363, 0, 0 )
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]

[connection signal="lacun_change" from="CanvasLayer/GUI" to="." method="_on_GUI_lacun_change"]
[connection signal="octave_change" from="CanvasLayer/GUI" to="." method="_on_GUI_octave_change"]
[connection signal="period_change" from="CanvasLayer/GUI" to="." method="_on_GUI_period_change"]
[connection signal="persist_change" from="CanvasLayer/GUI" to="." method="_on_GUI_persist_change"]
